Blender 2.80.51 Outliner Layer Sorting Opposite Of Layer and TimeLine Views #62802

Closed
opened 2019-03-21 09:09:04 +01:00 by blendaluva · 3 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: Intel(R) HD Graphics 4000 Intel 4.0.0 - Build 10.18.10.5059

Blender Version
Broken: version: 2.80 (sub 51), branch: master, commit date: 2019-03-21 00:58, hash: 0bbff8a711
Worked: (optional)

Short description of error
The sorting of the Grease Pencil stroke layers is opposite in the outliner than what is displayed in the layer and Dope Sheet Summary Timeline view, even as the layers are moved up and down in the layer view.

Exact steps for others to reproduce the error
steps in the video link below:
https://youtu.be/Qx7-7MffP5w

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: Intel(R) HD Graphics 4000 Intel 4.0.0 - Build 10.18.10.5059 **Blender Version** Broken: version: 2.80 (sub 51), branch: master, commit date: 2019-03-21 00:58, hash: `0bbff8a711` Worked: (optional) **Short description of error** The sorting of the Grease Pencil stroke layers is opposite in the outliner than what is displayed in the layer and Dope Sheet Summary Timeline view, even as the layers are moved up and down in the layer view. **Exact steps for others to reproduce the error** steps in the video link below: https://youtu.be/Qx7-7MffP5w
Author

Added subscriber: @blendaluva

Added subscriber: @blendaluva
Antonio Vazquez self-assigned this 2019-03-21 09:26:07 +01:00

This issue was referenced by b346a7c0df

This issue was referenced by b346a7c0df38a308bf6f586a74c72b2e03f11d15

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62802
No description provided.