Fix T62802: Layer order inverted in Outliner